# kafka-delta-proto-ingest

./: Cargo.toml  README.md
crates/ingest/: Cargo.toml  README.md
crates/ingest-cli/: Cargo.toml
crates/ingest-cli/src/: lib.rs  main.rs
crates/ingest/src/: deserialize.rs  ingest.rs  lib.rs  main.rs  writer.rs
crates/schema-registry/: Cargo.toml
crates/schema-registry/src/: arrow.rs  json.rs  lib.rs  proto_common_types.rs  proto_decoder.rs  proto_resolver.rs  proto_schema.rs  registry.rs
crates/schema_registry/: Cargo.toml  README.md
crates/schema_registry/src/: registry.rs
examples/delta/create_table/: main.rs
examples/delta/proto_delta_schema/: main.rs  proto_schema.rs  registry.rs
examples/delta/read_table/: main.rs
examples/delta/write_table/: main.rs
internal-examples/: Cargo.toml  README.md
internal-examples/examples/: proto_schema_to_delta_table.rs  read_delta_table.rs
src/: deserialize.rs  ingest.rs  lib.rs  main.rs
