[package]
name = "kafka-delta-proto-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
rdkafka = "0.36.2"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"]}
url = "2.5.0"
futures-util = "0.3.30"
futures = "0.3.30"
schema_registry_converter = { version = "4.0.0", features = ["easy", "protofish", "proto_decoder"] }
protofish = "0.5.2"
deltalake = { version = "0.17.1", features = ["datafusion"] }
serde = "1.0.198"
serde_json = "1.0.116"


[[example]]
name = "create-table"
path = "examples/delta/create_table/main.rs"

[[example]]
name = "write-table"
path = "examples/delta/write_table/main.rs"

[[example]]
name = "read-table"
path = "examples/delta/read_table/main.rs"

[profile.release]
lto = true
