[workspace]
members = [
    "crates/ingest-cli",
    "crates/schema-registry",
    "internal-examples"
]

resolver = "2"

[workspace.package]
authors = ["Fotis Paschos <fpaschos@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.82"
thiserror = "1.0.58"
tokio = { version = "1.37.0", default-features = false, features = ["macros"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
futures-util = "0.3.30"
futures = "0.3.30"
serde = "1.0.198"
serde_json = "1.0.116"
dashmap = "5.5.3"
deltalake = { version = "0.17.1", default-features = false }


[profile.release]
codegen-units = 1
lto = true



